Github issue #395 When user select the "Messages" from the list; posts related to that Message won't see -- Wrapped message container into full height container. Also had to remove the sticky behaviour to not have overflow issue when page is scrolled to the bottom. And, I guess, in after scrolls bar we don't need sticky behaviour anyway.

--- a/src/projects/detail/Messages.scss
+++ b/src/projects/detail/Messages.scss
@@ -18,15 +18,18 @@
   @include flexBox;
   max-width: 1110px;
   margin: 20px auto;
+  height: calc(100% - 20px);// 20px is for bottom margin
   
   .left-area {
     @include flexWidth(1);
     max-width: 360px;
     z-index: 14;/* Don't know the exact reason, but it needs explicit z-index to get behind the topbar*/
+    overflow-y: auto;
   }
   .right-area {
     @include flexWidth(2);
     margin-left: 4 * $base-unit;
+    overflow-y: auto;
 
     .messaging-empty-state {
       margin-bottom: 4 * $base-unit;
